@@ -9,12 +9,17 @@ class KestrelProject(info: ProjectInfo)
   with SubversionPublisher
   with PublishSite
 {
-  val ostrich = "com.twitter" % "ostrich" % "4.9.4"
-  val naggati = "com.twitter" % "naggati" % "2.2.0"
-  val finagle = "com.twitter" % "finagle-core" % "1.9.4-SNAPSHOT"
-  val finagle_ostrich4 = "com.twitter" % "finagle-ostrich4" % "1.9.0"
+  val finagleVersion = "1.9.6"
+
+  val libkestrel = "com.twitter" % "libkestrel" % "1.0.0-SNAPSHOT"
+  val naggati = "com.twitter" % "naggati" % "2.2.2-SNAPSHOT" intransitive() // allow custom netty
+  val netty   = "org.jboss.netty" % "netty" % "3.2.6.Final"
+  val finagle = "com.twitter" % "finagle-core" % finagleVersion
+  val ostrich = "com.twitter" % "ostrich" % "4.10.1-SNAPSHOT"
+  val finagle_ostrich4 = "com.twitter" % "finagle-ostrich4" % finagleVersion
+
   val scrooge_runtime = "com.twitter" % "scrooge-runtime" % "1.0.3"
-  override def scroogeVersion = "1.1.7"
+  override def scroogeVersion = "2.2.0"
 
   // building docs seems to make scalac's head explode, so skip it for now. :(
   override def docSources = sources(mainJavaSourcePath ##)
@@ -40,9 +45,11 @@ class KestrelProject(info: ProjectInfo)
 
   override def releaseBuild = !(projectVersion.toString contains "SNAPSHOT")
 
-  override def subversionRepository = Some("http://svn.local.twitter.com/maven-public")
+  override def subversionRepository = Some("https://svn.twitter.biz/maven-public")
 
   override def githubRemote = "github"
+
+  override def validateConfigFilesSet = allConfigFiles
 
   // generate a jar that can be run for load tests.
   def loadTestJarFilename = "kestrel-tests-" + version.toString + ".jar"
@@ -55,21 +62,21 @@ class KestrelProject(info: ProjectInfo)
   lazy val packageLoadTests = packageLoadTestsAction
   override def packageDistTask = packageLoadTestsAction && super.packageDistTask
 
-//  override def fork = forkRun(List("-Xmx1024m", "-verbosegc", "-XX:+PrintGCDetails"))
+  // generate a distribution zip for release.
+  def releaseDistTask = task {
+    val releaseDistPath = "dist-release" / distName ##
 
-  lazy val putMany = task { args =>
-    runTask(Some("net.lag.kestrel.load.PutMany"), testClasspath, args).dependsOn(testCompile)
-  } describedAs "Run a load test on PUT."
+    releaseDistPath.asFile.mkdirs()
+    (releaseDistPath / "libs").asFile.mkdirs()
+    (releaseDistPath / "config").asFile.mkdirs()
 
-  lazy val manyClients = task { args =>
-    runTask(Some("net.lag.kestrel.load.ManyClients"), testClasspath, args).dependsOn(testCompile)
-  } describedAs "Run a load test on many slow clients."
-
-  lazy val flood = task { args =>
-    runTask(Some("net.lag.kestrel.load.Flood"), testClasspath, args).dependsOn(testCompile)
-  } describedAs "Run a load test on a flood of PUT/GET."
-
-  lazy val packing = task { args =>
-    runTask(Some("net.lag.kestrel.load.JournalPacking"), testClasspath, args).dependsOn(testCompile)
-  } describedAs "Run a load test on journal packing."
+    FileUtilities.copyFlat(List(jarPath), releaseDistPath, log).left.toOption orElse
+      FileUtilities.copyFlat(List(outputPath / loadTestJarFilename), releaseDistPath, log).left.toOption orElse
+      FileUtilities.copyFlat(dependentJars.get, releaseDistPath / "libs", log).left.toOption orElse
+      FileUtilities.copy(((configPath ***) --- (configPath ** "*.class")).get, releaseDistPath / "config", log).left.toOption orElse
+      FileUtilities.copy((scriptsOutputPath ***).get, releaseDistPath, log).left.toOption orElse
+      FileUtilities.zip((("dist-release" ##) / distName).get, "dist-release" / (distName + ".zip"), true, log)
+  }
+  val ReleaseDistDescription = "Creates a deployable zip file with dependencies, config, and scripts."
+  lazy val releaseDist = releaseDistTask.dependsOn(`package`, makePom, copyScripts).describedAs(ReleaseDistDescription)
 }
